crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@read_match_filter_project.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- name :: Dynamic
rows:
- ["b"]
- ["c"]
- ["d"]
delta: nodes=+0 edges=+0 schema_changed=false
