crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@read_subplan.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- n :: Resolved(NodeRef)
rows:
- [#node_0]
- [#node_1]
- [#node_2]
- [#node_3]
delta: nodes=+0 edges=+0 schema_changed=false
