crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@read_typed_index_range_topk.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- name :: Dynamic
rows:
- ["b"]
- ["c"]
delta: nodes=+0 edges=+0 schema_changed=false
