crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@read_union_all.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- n :: Resolved(Integer)
rows:
- [1]
- [2]
delta: nodes=+0 edges=+0 schema_changed=false
