crates/selene-gql/tests/snapshots/executor_snapshot_corpus__corpus_snapshots_match@transaction_explicit_rollback.snap
---
source: crates/selene-gql/tests/executor_snapshot_corpus.rs
expression: snapshot.to_string()
---
schema:
- <empty>
rows:
- <empty>
delta: nodes=+0 edges=+0 schema_changed=false
